# resume-mate

./: .gitignore  GEMINI.md  README.md  master-profile.yaml  pyproject.toml
resume_mate/: main.py
resume_mate/ai/: agent.py
resume_mate/core/: models.py
resume_mate/renderer/: pdf.py  template.py
resume_mate/themes/dracula/: styles.css  template.html.j2
resume_mate/themes/standard/: styles.css  template.html.j2
resume_mate/utils/: console.py  file_io.py  vision.py
